# sdo-clv-pipeline-main

./: .gitignore  CITATION.cff  LICENSE  README  README.md  dataregion_output.csv  datathresholds.csv  my.mplstyle  old_setup.py  pyproject.toml  setup.py  solar.yml
aci/: download_data.pbs  download_data_batch.pro  download_data_idl.pbs
batch/: dates2012.txt  dates2013.txt  dates2014.txt  dates2015.txt  dates_to_download.txt  download_data.sh  merge_output.sh  preprocess_output.sh  run2012.sh  run2013.sh  run2014.sh  run2015.sh  run_pipe.pbs  run_pipe.sh  runall.sh
batch/download/: dop_download.pbs  download_data.pbs
pbs/: aia_download.pbs  con_download.pbs  dop_download.pbs  download_data.pbs  download_data_batch.pro  mag_download.pbs  run_pipe.pbs  run_pipeline.pbs
pbs/download/: aia_download.pbs  con_download.pbs  download_data.pbs  download_data_batch.pro
pbs/run_pipe/: run_apr14.pbs  run_aug14.pbs  run_dec14.pbs  run_feb14.pbs  run_jan14.pbs  run_jul14.pbs  run_jun14.pbs  run_mar14.pbs  run_may14.pbs  run_nov14.pbs  run_oct14.pbs  run_sep14.pbs
scripts/: aia_bonus.py  assemble_velocities.py  clv.py  correlations.py  debug.py  demo.ipynb  demo_loop.ipynb  demo_loop.py  download_720.py  download_720.sh  download_data.pro  download_data.py  download_plot_data.py  download_sdo.pro  download_stuff.py  exportfile.csh  fig1.py  fig1_2.py  fig2.py  fig3.py  fig4.py  fig4_5.py  fig4_5_6.py  fig7.py  find_missing_data.py  int_vel_pen.py  magnets.py  make_plots.py  merge_output.py  michael_run.py  moats_data.npz  moats_data.npz.REMOVED.git-id  pen_debug.py  pen_mystery.py  plot_ld.py  preprocess_output.py  run_pipe.py  rv_time_series.py  sdo-pypline.py  spot_frac.py  (+2 more)
sdo_clv_pipeline/: demo_loop.ipynb  download_stuff.py  fig4_5_6.py  legendre.py  paths.py  plot_moats_data.py  reproject.py  sdo_download.py  sdo_image.py  sdo_io.py  sdo_plot.py  sdo_process.py  sdo_vels.py
sdo_pypline/: legendre.py  limbdark.py  paths.py  sdo_download.py  sdo_image.py  sdo_io.py  sdo_plot.py  sdo_process.py  sdo_vels.py  sun_mask.py
src/: geometry.py  sdo-pypline.py
(+2 files in other folders)
