[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sdo_clv_pipeline"]

[project]
name = "sdo_clv_pipeline"
authors = [
    {name = "Michael Palumbo", email = "palumbo.astro@gmail.com"}
]

description = "SDO data reduction for center-to-limb variability"
version = "0.1.1"
readme = "README.md"
requires-python = "==3.11.6"

dependencies = [
    "numpy~=2.2",
    "pandas",
    "PyQt5",
    "matplotlib",
    "sunpy",
    "astropy",
    "scipy",
    "scikit-image",
    "ipykernel>=6.29.5",
    "numba>=0.61.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.7.10",
]
