[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sdo_clv_pipeline"]

[project]
name = "sdo_clv_pipeline"
authors = [
    {name = "Michael Palumbo", email = "palumbo.astro@gmail.com"}
]

description = "SDO data reduction for center-to-limb variability"
version = "0.4.0"
readme = "README.md"
requires-python = "==3.11.6"

dependencies = [
    "numpy~=2.2",
    "pandas",
    "matplotlib",
    "sunpy[all]",
    "astropy",
    "scipy",
    "scikit-image",
    "ipykernel>=6.29.5",
    "numba>=0.61.2",
    "tqdm>=4.67.1",
    "ipdb>=0.13.13",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.7.10",
]
